// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TooltippedButton > should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<button
  class="rmd-button rmd-button--icon rmd-interaction-surface"
  id=":r0:"
  type="button"
>
  <span>
    Content
  </span>
</button>
`;

exports[`TooltippedButton > should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<button
  class="rmd-button rmd-button--icon rmd-interaction-surface custom-class-name"
  id=":r0:"
  style="color: white;"
  type="button"
>
  <span>
    Content
  </span>
</button>
`;
